# code_trm_python_mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_trm.py
src/: __init__.py  constants.py  server.py  types.py
src/analyzer/: __init__.py
src/patcher/: __init__.py
src/shared/: __init__.py  sessions.py
src/state/: __init__.py
src/tools/: param_translator.py  schemas.py
src/tools/handlers/: __init__.py
src/tools/handlers/lib/: __init__.py  evaluation.py
src/utils/: __init__.py  command.py  parser.py  py_error_parser.py  scoring.py
