[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-trm-python-mcp"
version = "1.0.0"
description = "TRM-inspired MCP server for recursive code refinement in Python data analysis projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "trm", "code-refinement", "llm", "testing", "data-analysis", "python"]
authors = [
    {name = "Andrea Salvatore", email = "andrea@example.com"}
]

dependencies = [
    "mcp>=0.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
    "mypy>=1.5.0",
    "GitPython>=3.1.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
code-trm-python-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
